# multi-agent-genai-system

./: .coverage  .gitignore  Dockerfile.backend  README.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
src/: system_modifier.py
src/agents/: analyzer_agent.py  architect_agent.py  base_agent.py  builder_agent.py  deployment_agent.py  designer_agent.py  doc_writer_agent.py  evaluator_agent.py  idea_generation_agent.py  infrastructure_agent.py  integrator_agent.py  prompt_optimizer_agent.py  refactoring_agent.py  refinement_agent.py  retrospection_agent.py  sentinel_agent.py
src/mcp_server/: main.py  middleware.py
src/tools/: arxiv_tool.py  ast_tool.py  domain_expert_tool.py  ingestion_tool.py  pdf_reader_tool.py  runtime_monitor_tool.py  tools.py
src/utils/: config.py  logging_config.py
tests/agents/: test_analyzer_agent.py  test_base_agent.py  test_idea_generation_agent.py
tests/mcp_server/: test_main.py  test_middleware.py
tests/tools/: test_filesystem_tool.py  test_runtime_monitor.py  test_system_modifier.py
tests/utils/: test_config.py  test_logging_config.py
ui/src/: App.css  App.jsx
ui/src/components/: ErrorMessage.jsx  LoadingSpinner.jsx  StatusMonitor.jsx
ui/src/components/__tests__/: StatusMonitor.test.jsx
ui/src/components/styles/: components.css
