[tool.poetry]
name = "multi-agent-genai-system"
version = "0.1.0"
description = ""
authors = ["Gemini Architect AI"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
redis = "^5.0.4"
langchain = "^0.1.20"
langchain-community = "^0.0.38"
ollama = "^0.2.1"
chromadb = "^0.5.0"
arxiv = "^2.1.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
plantuml = ">=0.3.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
pytest-mock = "^3.12.0"
fakeredis = "^2.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"
